--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
+  "type": "commonjs",
   "name": "express",
   "version": "1.0.0",
   "main": "index.js",
