--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon --exec node --loader ts-node/esm index.ts"
+    "dev": "nodemon --exec node --loader ts-node/esm src/index.ts"
   },
   "author": "",
   "license": "ISC",
