fix: correct port mapping for process1 in Docker Compose configuration and adjust worker processes in Nginx configuration

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 # Main context (this is the global configuration)
-worker_processes 1;
+worker_processes auto;
 
 events {
     worker_connections 1024;
