--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon --exec node --loader ts-node/esm src/index.ts"
+    "dev": "nodemon --exec node --loader ts-node/esm src/index.ts",
+    "seed:admin" : "node dist/scripts/adminSeed.js"
   },
   "author": "",
   "license": "ISC",
