--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
   "type": "module",
   "name": "express",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.js", 
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf dist/ && npx tsc",
     "start": "node dist/index.js",
-    "dev": "npx nodemon --exec ts-node src/index.ts",
+    "dev": "npx nodemon --exec tsx src/index.ts",
     "seed:admin": "node dist/scripts/adminSeed.js"
   },
   "author": "",
@@ -36,6 +36,7 @@
     "@types/socket.io": "^3.0.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.2"
   }
 }
