--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@ node_modules
 # Keep environment variables out of version control
 .env
 
-/generated/prisma
+generated/prisma
 
-.vscode
+logs/
 
-/dist
+.vscode/
+
+dist/
