--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "rm -rf dist/ && npx tsc",
     "start": "node dist/index.js",
     "dev": "npx nodemon --exec tsx src/index.ts",
-    "seed:admin": "node dist/scripts/adminSeed.js"
+    "seed": "node dist/scripts/seed.js"
   },
   "author": "",
   "license": "ISC",
