feat: update Docker and deployment configurations, enhance health check endpoint, and improve code comments

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,6 +62,10 @@ jobs:
             # Pull the latest image
             docker pull ${{ secrets.DOCKER_USERNAME }}/todo-app:latest
             
+            # set required variables for docker compose
+            export DOCKER_USERNAME="${{ secrets.DOCKER_USERNAME }}"
+            export IMAGE_NAME="todo-app" 
+
             # Recreate containers using the updated image.
             docker compose up -d --force-recreate
             
