--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,7 @@
-# Main context (this is the global configuration)
-worker_processes auto;
+worker_processes auto; // Based on number of CPU cores
 
 events {
-    worker_connections 1024;
+    worker_connections 1024; // Maximum simultaneous connections per worker process
 }
 
 http {
@@ -29,7 +28,7 @@ http {
     }
 
     server {
-        listen 80;  
+    listen 80;  
         server_name localhost;
 
         location / {
