--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
-worker_processes auto; // Based on number of CPU cores
+worker_processes auto; # Based on number of CPU cores
 
 events {
-    worker_connections 1024; // Maximum simultaneous connections per worker process
+    worker_connections 1024; # Maximum simultaneous connections per worker process
 }
 
 http {
