--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,7 +78,7 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          request_pty: true
+          request_pty: true # sudo needs TTY (Teletype/ terminal) 
           script: |
             # Check if Nginx is installed, if not, install it.
             if ! command -v nginx >/dev/null 2>&1; then
