feat: update deployment workflow to copy both docker-compose.yml and nginx.conf to EC2

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,9 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "docker-compose.yml"
+          source: |
+            docker-compose.yml
+            nginx.conf
           target: "~/todo"
 
       # 6. Deploy via SSH to EC2
