--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
           docker push $IMAGE_ID:$VERSION_TAG
 
       # 5. Copy docker-compose.yml
-      - name: Copy config files to EC2
+      - name: Copy docker-compose.yml file to EC2
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.SSH_HOST }}
