--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,8 @@ events {
 }
 
 http {
-    include "C:/Program Files/nginx-1.28.0/conf/mime.types";
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream; # Add default type if removed
 
     upstream nodejs_cluster {
         server 127.0.0.1:5000;
@@ -17,8 +18,8 @@ http {
         listen 443 ssl;
         server_name localhost;
 
-        ssl_certificate "D:/Documents/Dev/Projects/PG/Nginx/nginx/Certificates/nginx-selfsigned.crt";
-        ssl_certificate_key "D:/Documents/Dev/Projects/PG/Nginx/nginx/Certificates/nginx-selfsigned.key";
+        ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
 
         location / {
             proxy_pass http://nodejs_cluster;
@@ -28,9 +29,10 @@ http {
     }
 
     server {
-    listen 80;  
+        listen 80;  
         server_name localhost;
 
+        # Redirects HTTP traffic to HTTPS
         location / {
             return 301 https://$host$request_uri;
         }
