--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch: # Allows manual trigger
+  workflow_dispatch: # manual trigger
 
 jobs:
   deploy:
@@ -15,29 +15,29 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # 2. Build Docker Image
+      # 2. Build Docker Image 
       - name: Build
         run: |
-          IMAGE_ID=${{ secrets.DOCKER_USERNAME }}/todo-app
+          IMAGE_ID=${{ secrets.DOCKER_USERNAME }}/${{ secrets.IMAGE_NAME }}
           VERSION_TAG=$(echo $GITHUB_SHA | cut -c1-7)
           docker build -t $IMAGE_ID:latest -t $IMAGE_ID:$VERSION_TAG .
 
-      # 3. Log in to Docker Hub
+      # 3. Log in to Docker Hub (No change)
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 4. Push Docker Image
+      # 4. Push Docker Image (No change)
       - name: Push Image
         run: |
-          IMAGE_ID=${{ secrets.DOCKER_USERNAME }}/todo-app
+          IMAGE_ID=${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_USERNAME }}
           VERSION_TAG=$(echo $GITHUB_SHA | cut -c1-7)
           docker push $IMAGE_ID:latest
           docker push $IMAGE_ID:$VERSION_TAG
 
-      # 5. Copy docker-compose.yml
+      # 5. Copy config files to EC2
       - name: Copy docker-compose.yml file to EC2
         uses: appleboy/scp-action@v0.1.4
         with:
@@ -47,17 +47,7 @@ jobs:
           source: "docker-compose.yml"
           target: "~/todo"
 
-      # 5. Copy nginx.conf
-      - name: Copy nginx config
-        uses: appleboy/scp-action@v0.1.4
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "nginx.conf"
-          target: "~/todo"
-
-          # 6. Inject SSL Certificates
+      # 6. Inject SSL Certificates
       - name: Securely Inject SSL Certificates
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -69,49 +59,57 @@ jobs:
             # Create the secure directory
             sudo mkdir -p /etc/nginx/ssl
             
-            # Inject Private Key (NGINX_KEY)
-            # Use 'tee' with 'sudo' to write file content as root, and 'EOF' to handle multi-line secrets.
+            # Inject NGINX certificates (as before)
             echo "${{ secrets.NGINX_KEY }}" | sudo tee /etc/nginx/ssl/nginx-selfsigned.key > /dev/null
-            
-            # Inject Certificate (NGINX_CERT)
             echo "${{ secrets.NGINX_CERTIFICATE }}" | sudo tee /etc/nginx/ssl/nginx-selfsigned.crt > /dev/null
             
-            # Set secure permissions (600 for key, 644 for cert)
+            # Set secure permissions
             sudo chmod 600 /etc/nginx/ssl/nginx-selfsigned.key
             sudo chmod 644 /etc/nginx/ssl/nginx-selfsigned.crt
 
-      # 6. Deploy via SSH to EC2
+      # 7. Inject Application .env File
+      - name: Inject Production .env File
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd ~/todo
+            echo "${{ secrets.PROD_VARIABLES }}" > .env
+            chmod 600 .env
+
+      # 8. Deploy via SSH to EC2
       - name: Deploy to EC2 via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          # commands to run on the EC2 server
           script: |
-            # Navigate to the application directory on the EC2 server
             cd ~/todo
 
-            # Pull the latest image
-            docker pull ${{ secrets.DOCKER_USERNAME }}/todo-app:latest
+            # Pull latest image
+            docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_USERNAME }}:latest
 
-            # set required variables for docker compose
+            # set required variables for docker compose 
             export DOCKER_USERNAME="${{ secrets.DOCKER_USERNAME }}"
-            export IMAGE_NAME="todo-app" 
+            export IMAGE_NAME="${{ secrets.DOCKER_USERNAME }}" 
 
-            # Recreate containers using the updated image.
+            # Recreate containers with update image (Docker compose doesn't detect image changes unless the yml file changes)
             docker compose up -d --force-recreate
 
             # Clean up old, unused images
             docker image prune -f
-      # 7. Setup and Start Nginx
+
+      # 9. Setup and Start Nginx
       - name: Setup & Start Nginx
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          request_pty: true # sudo needs TTY (Teletype/ terminal) 
+          request_pty: true
           script: |
             # Check if Nginx is installed, if not, install it.
             if ! command -v nginx >/dev/null 2>&1; then
@@ -124,9 +122,10 @@ jobs:
 
             # Copy custom nginx.conf to /etc/nginx and back up existing one
             sudo cp /etc/nginx/nginx.conf /etc/nginx/nginx.conf.backup || true
-            sudo cp ~/todo/nginx.conf /etc/nginx/nginx.conf
+            
+            # Echo nginx.conf contents to EC2 server.
+            cat nginx.conf | sudo tee /etc/nginx/nginx.conf > /dev/null
 
             # Ensure Nginx starts on boot and is running
             sudo systemctl enable nginx
             sudo systemctl restart nginx
-
