--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,13 +38,15 @@ jobs:
           docker push $IMAGE_ID:$VERSION_TAG
 
       # 5. Copy config files to EC2
-      - name: Copy docker-compose.yml file to EC2
+      - name: Copy config files to EC2
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "docker-compose.yml"
+          source: |
+            docker-compose.yml
+            nginx.conf
           target: "~/todo"
 
       # 6. Inject SSL Certificates
@@ -124,7 +126,7 @@ jobs:
             sudo cp /etc/nginx/nginx.conf /etc/nginx/nginx.conf.backup || true
             
             # Echo nginx.conf contents to EC2 server.
-            cat nginx.conf | sudo tee /etc/nginx/nginx.conf > /dev/null
+              sudo cp ~/todo/nginx.conf /etc/nginx/nginx.conf
 
             # Ensure Nginx starts on boot and is running
             sudo systemctl enable nginx
