fix: update config file transfer step to use brace expansion for multiple files

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,9 +44,7 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: |
-            docker-compose.yml
-            nginx.conf
+          source: "{docker-compose.yml, nginx.conf}"
           target: "~/todo"
 
       # 6. Inject SSL Certificates
