fix: securely inject production variables into .env file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,6 +86,8 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd ~/todo
+            echo ${{ secrets.PROD_VARIABLES }}
+            echo ${{ secrets.PROD_VARIABLES }} > .env
             echo "${{ secrets.PROD_VARIABLES }}" | tee .env > /dev/null
             chmod 600 .env
 
