--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,18 +77,22 @@ jobs:
             sudo chmod 600 /etc/nginx/ssl/nginx-selfsigned.key
             sudo chmod 644 /etc/nginx/ssl/nginx-selfsigned.crt
 
-      # 7. Inject Application .env File
+        # 7. Inject Application .env File
       - name: Inject Production .env File
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
+          # Use an environment variable to pass the secret (optional but cleaner)
+          env:
+            ENV_SECRET_B64: ${{ secrets.PROD_VARIABLES_B64 }}
           script: |
             cd ~/todo
-            echo ${{ secrets.PROD_VARIABLES }}
-            echo ${{ secrets.PROD_VARIABLES }} > .env
-            echo "${{ secrets.PROD_VARIABLES }}" | tee .env > /dev/null
+            # 1. Echo the Base64 string.
+            # 2. Pipe it to 'base64 -d' to decode it back into a multiline file.
+            # 3. Use tee to write it to .env.
+            echo "$ENV_SECRET_B64" | base64 -d | tee .env > /dev/null
             chmod 600 .env
 
       # 8. Deploy via SSH to EC2
