--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,20 +77,20 @@ jobs:
             sudo chmod 600 /etc/nginx/ssl/nginx-selfsigned.key
             sudo chmod 644 /etc/nginx/ssl/nginx-selfsigned.crt
 
-      # 7. Inject Application .env File
       - name: Inject Production .env File
         uses: appleboy/ssh-action@v1.0.3
         env:
-          ENV_FILE: ${{ secrets.PROD_VARIABLES }}
+          ENV_FILE: ${{ secrets.PROD_ENV_FILE }}
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd ~/todo
-            echo "$ENV_FILE" > .env
+            cat <<'EOF' > .env
+            $ENV_FILE
+            EOF
             chmod 600 .env
-
 
       # 8. Deploy via SSH to EC2
       - name: Deploy to EC2 via SSH
