--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Inject Production .env File
         uses: appleboy/ssh-action@v1.0.3
         env:
-          ENV_FILE: ${{ secrets.PROD_ENV_FILE }}
+          ENV_FILE: ${{ secrets.PROD_VARIABLES}}
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
