--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-        
+
       - name: Build and Cache Docker Image
         uses: docker/setup-buildx-action@v3
 
@@ -33,7 +33,6 @@ jobs:
             ${{ secrets.DOCKER_USERNAME }}/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-
 
       - name: Copy config files to EC2
         uses: appleboy/scp-action@v0.1.4
@@ -66,7 +65,7 @@ jobs:
             echo "${{ secrets.NGINX_CERTIFICATE }}" | sudo tee /etc/nginx/ssl/nginx-selfsigned.crt > /dev/null
             sudo chmod 600 /etc/nginx/ssl/nginx-selfsigned.key
             sudo chmod 644 /etc/nginx/ssl/nginx-selfsigned.crt
-        
+
       - name: Inject Production .env File
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -95,7 +94,7 @@ jobs:
             docker compose up -d --remove-orphans
             docker image prune -f
 
-      - name: Setup & Start Nginx
+      - name: Start Nginx
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SSH_HOST }}
