--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "dev": "npx nodemon --exec tsx src/index.ts",
     "seed": "node dist/scripts/seed.js",
     "format": "npx prettier . --write",
-    "lint": "npx eslint . --fix"
+    "lint": "npx eslint . --fix",
+    "prepare": "husky"
   },
   "author": "",
   "license": "ISC",
@@ -42,6 +43,7 @@
     "eslint": "^9.38.0",
     "globals": "^16.4.0",
     "jiti": "^2.6.1",
+    "lint-staged": "^16.2.6",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
