feat: upgrade Node.js version in Dockerfile and add health checks to services in docker-compose.yml

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,9 +9,9 @@ http {
     default_type application/octet-stream; # Add default type if removed
 
     upstream nodejs_cluster {
-        server 127.0.0.1:5000;
-        server 127.0.0.1:5001;
-        server 127.0.0.1:5002;
+        server process1:5000;
+        server process2:5000;
+        server process3:5000;
     }
 
     server {
