--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,12 @@ services:
     environment:
       CONTAINER_NAME: process1
     restart: on-failure
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/api/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
 
   process2:
     image: ${DOCKER_USERNAME}/${IMAGE_NAME}:latest
@@ -18,6 +24,12 @@ services:
     environment:
       CONTAINER_NAME: process2
     restart: on-failure
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/api/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
 
   process3:
     image: ${DOCKER_USERNAME}/${IMAGE_NAME}:latest
@@ -28,6 +40,26 @@ services:
     environment:
       CONTAINER_NAME: process3
     restart: on-failure
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/api/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
+
+  nginx:
+    image: nginx:stable-alpine3.21
+    ports:
+      - "80:80" 
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      process1:
+        condition: service_healthy
+      process2:
+        condition: service_healthy
+      process3:
+        condition: service_healthy
 
   seeder:
     image: ${DOCKER_USERNAME}/${IMAGE_NAME}:latest
