--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,14 +94,14 @@ jobs:
             docker compose up -d --remove-orphans
             docker image prune -f
 
-      - name: Start Nginx
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          request_pty: true
-          script: |
-            sudo cp ~/todo/nginx.conf /etc/nginx/nginx.conf 
-            sudo systemctl enable nginx
-            sudo systemctl reload nginx
+      # - name: Start Nginx
+      #   uses: appleboy/ssh-action@v1.0.3
+      #   with:
+      #     host: ${{ secrets.SSH_HOST }}
+      #     username: ${{ secrets.SSH_USER }}
+      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
+      #     request_pty: true
+      #     script: |
+      #       sudo cp ~/todo/nginx.conf /etc/nginx/nginx.conf 
+      #       sudo systemctl enable nginx
+      #       sudo systemctl reload nginx
