--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "dev": "npx nodemon --exec tsx src/index.ts",
     "seed": "node dist/scripts/seed.js",
     "format": "npx prettier . --write",
-    "lint": "npx eslint . --fix"
+    "lint": "npx eslint . --fix",
+    "prepare": "husky"
   },
   "author": "",
   "license": "ISC",
@@ -41,6 +42,7 @@
     "@typescript-eslint/parser": "^8.46.2",
     "eslint": "^9.38.0",
     "globals": "^16.4.0",
+    "husky": "^9.1.7",
     "jiti": "^2.6.1",
     "lint-staged": "^16.2.6",
     "nodemon": "^3.1.10",
