fix: update .env.example and remove Docker environment variables from deploy workflow

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ FRONTEND_URL=http://localhost:3000
 ADMIN_NAME=admin
 ADMIN_EMAIL=admin@admin.com
 ADMIN_PASSWORD=admin
+DOCKER_USERNAME=username
+IMAGE_NAME=image
+
+
