--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name localhost;
+        server_name _;
 
         ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
         ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
@@ -30,7 +30,7 @@ http {
 
     server {
         listen 80;  
-        server_name localhost;
+        server_name _;
 
         # Redirects HTTP traffic to HTTPS
         location / {
