Added healthcehck to db contaienr

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,19 @@
-worker_processes auto; # Based on number of CPU cores
+worker_processes auto;
 
 events {
-    worker_connections 1024; # Maximum simultaneous connections per worker process
+    worker_connections 1024;
 }
 
 http {
     include /etc/nginx/mime.types;
-    default_type application/octet-stream; # Add default type if removed
+    default_type application/octet-stream;
+
+    gzip on;
+    gzip_min_length 1000;
+    gzip_proxied any;
+    gzip_comp_level 5;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_disable "msie6";
 
     upstream nodejs_cluster {
         server process1:5000;
@@ -32,7 +39,6 @@ http {
         listen 80;  
         server_name _;
 
-        # Redirects HTTP traffic to HTTPS
         location / {
             return 301 https://$host$request_uri;
         }
