--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
     environment:
       CONTAINER_NAME: process1
     restart: on-failure
+    depends_on:
+      db:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "wget", "-qO-", "http://localhost:5000/api/health"]
       interval: 10s
@@ -20,6 +23,9 @@ services:
     environment:
       CONTAINER_NAME: process2
     restart: on-failure
+    depends_on:
+      db:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "wget", "-qO-", "http://localhost:5000/api/health"]
       interval: 10s
@@ -34,6 +40,9 @@ services:
     environment:
       CONTAINER_NAME: process3
     restart: on-failure
+    depends_on:
+      db:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "wget", "-qO-", "http://localhost:5000/api/health"]
       interval: 10s
@@ -44,11 +53,11 @@ services:
   nginx:
     image: nginx:stable-alpine3.21
     ports:
-      - "80:80" 
+      - "80:80"
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - /etc/nginx/ssl:/etc/nginx/ssl:ro 
+      - /etc/nginx/ssl:/etc/nginx/ssl:ro
     depends_on:
       process1:
         condition: service_healthy
@@ -67,6 +76,12 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U task-manager-db -d tasks"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 20s
   
   seeder:
     image: ${DOCKER_USERNAME}/${IMAGE_NAME}:latest
