--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
-      start_period: 30s
+      start_period: 10s
 
   process2:
     image: ${DOCKER_USERNAME}/${IMAGE_NAME}:latest
@@ -39,7 +39,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
-      start_period: 30s
+      start_period: 10s
 
   process3:
     image: ${DOCKER_USERNAME}/${IMAGE_NAME}:latest
@@ -60,7 +60,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
-      start_period: 30s
+      start_period: 10s
 
   nginx:
     image: nginx:stable-alpine3.21
@@ -111,6 +111,9 @@ services:
     env_file:
       - ./.env
     command: npm run seed
+    depends_on:
+      db: 
+        condition: service_healthy
 
 volumes:
   postgres_data:
