--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,7 +69,9 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - /etc/nginx/ssl:/etc/nginx/ssl:ro
+      - /etc/letsencrypt/live/zealtesfaye.me/fullchain.pem:/etc/nginx/certs/fullchain.pem:ro
+      - /etc/letsencrypt/live/zealtesfaye.me/privkey.pem:/etc/nginx/certs/privkey.pem:ro
+      # - /etc/nginx/ssl:/etc/nginx/ssl:ro
     depends_on:
       process1:
         condition: service_healthy
