--- a/nginx.conf
+++ b/nginx.conf
@@ -25,8 +25,8 @@ http {
         listen 443 ssl;
         server_name _;
 
-        ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
-        ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
+        ssl_certificate /etc/nginx/certs/fullchain.pem;
+        ssl_certificate_key /etc/nginx/certs/privkey.pem;
 
         location / {
             proxy_pass http://nodejs_cluster;
