--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,8 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.9.3"
   }
