--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,8 @@
 {
+  "type": "module",
+  "name": "express",
+  "version": "1.0.0",
+  "main": "server.js",
   "dependencies": {
     "@prisma/client": "^6.13.0",
     "bcrypt": "^6.0.0",
@@ -14,14 +18,10 @@
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
-  "type": "module",
-  "name": "express",
-  "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "build": "rm -rf dist/ && npx tsc",
-    "start": "node dist/index.js",
-    "dev": "npx nodemon --exec tsx src/index.ts",
+    "start": "node dist/server.js",
+    "dev": "npx nodemon --exec tsx src/server.ts",
     "seed": "node dist/scripts/seed.js",
     "format": "npx prettier . --write",
     "lint": "npx eslint . --fix",
