--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     volumes:
       - ./logs:/app/logs
     healthcheck:
-      test: ["CMD", "wget", "-qO-", "http://localhost:5000/api/health"]
+      test: ["CMD", "curl", "-s", "http://localhost:5000/api/health"]
       interval: 10s
       timeout: 5s
       retries: 3
@@ -35,28 +35,7 @@ services:
     volumes:
       - ./logs:/app/logs
     healthcheck:
-      test: ["CMD", "wget", "-qO-", "http://localhost:5000/api/health"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      start_period: 10s
-
-  process3:
-    image: ${DOCKER_USERNAME}/${IMAGE_NAME}:latest
-    env_file:
-      - ./.env
-    environment:
-      CONTAINER_NAME: process3
-    restart: on-failure
-    depends_on:
-      db:
-        condition: service_healthy
-      migrator:
-        condition: service_completed_successfully
-    volumes:
-      - ./logs:/app/logs
-    healthcheck:
-      test: ["CMD", "wget", "-qO-", "http://localhost:5000/api/health"]
+      test: ["CMD", "curl", "-s", "http://localhost:5000/api/health"]
       interval: 10s
       timeout: 5s
       retries: 3
