--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -9,7 +9,8 @@ USER app
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm ci
+RUN npm install -g pnpm
+RUN pnpm install --frozen-lockfile --ignore-scripts
 
 COPY . .
 RUN npx prisma generate
@@ -24,7 +25,9 @@ USER app
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm ci --only=production --ignore-scripts
+
+RUN npm install -g pnpm
+RUN pnpm install --frozen-lockfile --prod --ignore-scripts
 
 # Copy compiled code & dependencies
 COPY --from=build /app/dist ./dist
