--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,5 @@
 DATABASE_URL="postgresql://postgres:password@localhost:5432/tasks"
+DB_PASSWORD=password
 PORT=5000
 NODE_ENV=development
 JWT_SECRET=secret
@@ -8,5 +9,3 @@ ADMIN_EMAIL=admin@admin.com
 ADMIN_PASSWORD=admin
 DOCKER_USERNAME=username
 IMAGE_NAME=image
-
-
