fix: update Dockerfile to install openssl in build stage

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,8 @@
 # ------------------------ Build Stage ------------------------
 FROM node:20-slim AS build
 
+RUN apt-get update && apt-get install -y openssl && rm -rf /var/lib/apt/lists/*
+
 # user changed to a non-root user inside the container
 RUN addgroup --system app && adduser --system --ingroup app app
 RUN npm install -g pnpm
