--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,5 @@
 # ------------------------ Build Stage ------------------------
-FROM node:18-slim AS build
-
-RUN apt-get update && apt-get install -y openssl && rm -rf /var/lib/apt/lists/*
+FROM node:20-slim AS build
 
 # user changed to a non-root user inside the container
 RUN addgroup --system app && adduser --system --ingroup app app
@@ -15,14 +13,13 @@ COPY package*.json pnpm-lock.yaml ./
 RUN pnpm install --frozen-lockfile --ignore-scripts --shamefully-hoist 
 
 COPY . .
-ENV PRISMA_ENGINES_CHECKSUM_IGNORE_MISSING=1
 RUN npx prisma generate
 RUN npm run build
 
 # ---------------------- Runtime Stage ----------------------
-FROM node:18-slim AS runtime
+FROM node:20-slim AS runtime
 
-RUN apt-get update && apt-get install -y curl openssl && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 RUN addgroup --system app && adduser --system --ingroup app app
 RUN npm install -g pnpm
 
@@ -41,7 +38,6 @@ COPY --from=build /app/public ./public
 COPY --from=build /app/views ./views
 # docker-compose.yml is not included in the image, instead, it is copied directly to the server inside the ci/cd pipeline as a best practice
 
-ENV PRISMA_ENGINES_CHECKSUM_IGNORE_MISSING=1
 RUN npx prisma generate
 EXPOSE 5000
 
